<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SignUpActivity"
    android:background="@drawable/backgroundimage">

    <TextView
        android:id="@+id/registerText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/atomic_age"
        android:text="register here"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="50sp"
        tools:ignore="HardcodedText" />
    <TextView
        android:id="@+id/btnRegistrationPattern"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="550dp"
        android:textColor="@color/black"
        android:text="@string/registration_rules"
        android:textSize="30sp"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:fontFamily="@font/atomic_age"
        />
    <TextView
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/button3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:textColor="@color/black"
        android:text="@string/register_here"
        android:textSize="30sp"
        android:textAlignment="center"
        android:paddingTop="10dp"
        android:fontFamily="@font/atomic_age"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="150dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:id="@+id/txtUserName"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250sp"
        android:hint="@string/password"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        android:textAlignment="center"

        android:autofillHints="" />

    <EditText
        android:id="@+id/txtPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="350dp"
        android:textColorHint="@color/black"
        android:textSize="30sp"
        android:textAlignment="center"
        android:hint="@string/repeat_password"
        android:autofillHints="" />


</RelativeLayout>