...
    android:layout_height="match_parent"
    tools:context=".Activities.SignInActivity"
    android:background="@drawable/backgroundimage">


    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/atomic_age"
        android:text="Login Here"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:layout_marginTop="50sp"
        tools:ignore="HardcodedText"
        android:textAlignment="center"/>

    <TextView
        android:id="@+id/btnLogIn"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="382dp"
        android:layout_marginEnd="116dp"
...

        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/btnRegisterIfNotSignedUp"
        android:layout_width="264dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="550dp"
        android:layout_marginEnd="78dp"
...
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textColorHint="@color/black"
        android:textColor="@color/black"
        android:id="@+id/txtLoginUserName"
        android:autofillHints=""
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/txtLoginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300sp"
...
