<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/customcolor"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/TreasurePic"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/chest12"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="75dp"/>

    <TextView
        android:id="@+id/txtTreasure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/TreasurePic"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/bangers"
        android:text="@string/congratulations"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/txtSlogan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtTreasure"
        android:layout_centerInParent="true"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/atomic_age"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="523dp" />

</RelativeLayout>