<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.SettingsActivity.SettingsActivity"
    android:background="@drawable/backgroundimage">


    <TextView
        android:id="@+id/Settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="568dp"
        android:fontFamily="@font/atomic_age"

        android:text="Settings"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="54dp" />

    <TextView
        android:id="@+id/btnLogIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="114dp"
        android:layout_marginBottom="314dp"
        android:background="@drawable/button3"
        android:fontFamily="@font/atomic_age"
        android:paddingTop="10dp"

        android:text="Change Name"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="296dp" />

    <TextView
        android:id="@+id/btnChangePass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="197dp"
        android:background="@drawable/button3"
        android:fontFamily="@font/atomic_age"
        android:paddingTop="10dp"
        android:text="Change Password"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="54dp"
        tools:layout_editor_absoluteY="421dp" />

    <TextView
        android:id="@+id/goback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="121dp"
        android:layout_marginBottom="55dp"
        android:background="@drawable/button3"
        android:fontFamily="@font/atomic_age"
        android:paddingTop="10dp"

        android:text="Go back"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="30sp"
        tools:layout_editor_absoluteX="116dp"
        tools:layout_editor_absoluteY="588dp"
        tools:ignore="MissingConstraints" />


</RelativeLayout>